# ePDFsuite

./: README.md  app_streamlit.py  app_streamlit_backup.py  camera_calibration.ipynb  ePDF_Workflow.ipynb  ePDFsuite.py  pdf_extraction.py  pyproject.toml  recalibration.py  requirements.txt  setup.py
app/: Readme.md
doc/: Readme.md
src/: PDF_BatchAnalysis.py  ePDFsuite.py  pdf_extraction.py  pdfanalysis.py  setup.py
src/epdfsuite/: PDF_BatchAnalysis.py  __init__.py  calibration.py  camera_library.py  ePDFsuite.py  filereader.py  lobato_scattering.py  pdf_extraction.py  pdfanalysis.py  recalibration.py  utilities.py
